--- a/retosAtareao/Retos-atareao.ipynb
+++ b/retosAtareao/Retos-atareao.ipynb
@@ -1072,6 +1072,58 @@
     "if __name__ == \"__main__\":\n",
     "    main()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a19aa646",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# Reto 05"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f0392c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Python 3.10.2 UTF-8\n",
+    "# Para el \"reto-python\" de Lorenzo Carbonell <a.k.a. atareao>\n",
+    "\n",
+    "from pathlib import Path\n",
+    "import os.path\n",
+    "from configurator import Configurator\n",
+    "from utils import list_images\n",
+    "\n",
+    "\n",
+    "def step1(path, tomlconfig):\n",
+    "    Configurator(path, tomlconfig)\n",
+    "    conf = Configurator(path, tomlconfig).read()\n",
+    "    print(conf)\n",
+    "    return conf\n",
+    "\n",
+    "\n",
+    "def step2(dictio):\n",
+    "    for dir in dictio['directorios'].values():\n",
+    "        print('=====', dir['in'], '=====')\n",
+    "        list_images(Path(dir['in']))\n",
+    "\n",
+    "\n",
+    "def main(app, tomlconf):\n",
+    "    path = os.path.join(os.path.expanduser(\"~\"),\n",
+    "                        '.config', app)\n",
+    "    step1(path, tomlconf)\n",
+    "    step2(step1())\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    APP = \"diogenes\"\n",
+    "    config = f\"{APP}.conf\"\n",
+    "    main(APP, config)\n"
+   ]
   }
  ],
  "metadata": {
