--- a/HackerRank/ejercicios_hackerRank_01.ipynb
+++ b/HackerRank/ejercicios_hackerRank_01.ipynb
@@ -239,6 +239,266 @@
     "for i in sorted(resultado):\n",
     "    print(i[0])\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## La media de un alumnos \n",
+    "\n",
+    "Se da un número de alumnos. Por cada uno, se introduce su nombre y sus 3 notas. El ejercicio consiste en sacar del diccionario sus notas y devolver la media con un decimal de dos dígitos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "56.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "student_marks = {}\n",
+    "for _ in range(n):\n",
+    "    name, *line = input().split()\n",
+    "    scores = list(map(float, line))\n",
+    "    student_marks[name] = scores\n",
+    "query_name = input()\n",
+    "\n",
+    "suma = sum(student_marks[query_name])/3\n",
+    "print(f\"{suma:.2f}\")\n",
+    "\n",
+    "# INPUTS:\n",
+    "# 3\n",
+    "# Krishna 67 68 69\n",
+    "# Malika 52 56 60\n",
+    "# Arjun 70 98 63\n",
+    "# Malika\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Swap case\n",
+    "\n",
+    "Hay que cambiar de minúsculas a mayúsculas y viceversa lo que introduzca un usuario.\n",
+    "Esta es mi propuesta:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pRUEBA LA NUEVA TECNOLOGÍA pOWERsHELL"
+     ]
+    }
+   ],
+   "source": [
+    "cadena = input()\n",
+    "\n",
+    "\n",
+    "def case(i):\n",
+    "  if i.islower():\n",
+    "    return i.upper()\n",
+    "  else:\n",
+    "    return i.lower()\n",
+    "\n",
+    "\n",
+    "for i in cadena:\n",
+    "  print(case(i), end='')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sin embargo, en el ejercicio NO SE PUEDE MODIFICAR el bloque _if name_, por lo que la chicha está en elaborar la función:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eSTO ESTABA ESCRITO NORMAL. aHORA ¡no!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def swap_case(s):\n",
+    "    # return → es lo que estaba por defecto.\n",
+    "    cadena = []\n",
+    "    for i in s:\n",
+    "        if i.islower():\n",
+    "            cadena.append(i.upper())\n",
+    "        else:\n",
+    "            cadena.append(i.lower())\n",
+    "    return ''.join(cadena)\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    s = input()\n",
+    "    result = swap_case(s)\n",
+    "    print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## String split and join\n",
+    "Este es una gilipollez y te lo dan hecho. Debería estar antes del anterior, porque te explica el join. Es más, te dice cómo hacer el ejercicio "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_and_join(line):\n",
+    "    line = line.split(\" \")\n",
+    "    line = \"-\".join(line)\n",
+    "    return line\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    line = input()\n",
+    "    result = split_and_join(line)\n",
+    "    print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compare the triplets\n",
+    "\n",
+    "El ejercicio consiste en proporcionar las 3 reseñas de cada participante y compararlas una contra una. Si una es mejor, da un punto. Si ambas empatan, nadie gana puntos. Al final, el output tiene que reflejar los puntos que ha ganado cada uno. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#!/bin/python3\n",
+    "#\n",
+    "# Complete the 'compareTriplets' function below.\n",
+    "#\n",
+    "# The function is expected to return an INTEGER_ARRAY.\n",
+    "# The function accepts following parameters:\n",
+    "#  1. INTEGER_ARRAY a\n",
+    "#  2. INTEGER_ARRAY b\n",
+    "#\n",
+    "\n",
+    "\n",
+    "def compareTriplets(a, b):\n",
+    "    # Write your code here\n",
+    "    apoints = 0\n",
+    "    bpoints = 0\n",
+    "    tuplazip = zip(a, b)\n",
+    "    for i in tuplazip:\n",
+    "        if i[0] > i[1]:\n",
+    "            apoints += 1\n",
+    "        if i[0] < i[1]:\n",
+    "            bpoints += 1\n",
+    "        else:\n",
+    "            pass\n",
+    "    return [apoints, bpoints]\n",
+    "\n",
+    "# Este ya viene dado:\n",
+    "if __name__ == '__main__':\n",
+    "\n",
+    "    a = list(map(int, input().rstrip().split()))\n",
+    "\n",
+    "    b = list(map(int, input().rstrip().split()))\n",
+    "\n",
+    "    result = compareTriplets(a, b)\n",
+    "\n",
+    "    print(' '.join(map(str, result)))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Diagonal difference\n",
+    "\n",
+    "Se da un primer número, que son las filas/columnas de una matriz cuadrada. Hay que calcular la diferencia absoluta de la suma de sus diagonales. Así:\n",
+    "\n",
+    "3 # El número de filas y columnas del cuadrado.\n",
+    "```\n",
+    "1 2 3\n",
+    "4 5 6\n",
+    "9 8 9\n",
+    "```\n",
+    "Se sumarían 1+5+9 por un lado y 3+5+9 por otro = 15-17 = absoluto 2. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "def diagonalDifference(arr):\n",
+    "    # Write your code here\n",
+    "    dia1 = 0\n",
+    "    dia2 = 0\n",
+    "    for ar in arr:\n",
+    "        m = arr.index(ar)\n",
+    "        dia1 += ar[m]\n",
+    "        dia2 += ar[-m-1]\n",
+    "    return abs(dia1-dia2)\n",
+    "\n",
+    "# n = int(input().strip())\n",
+    "\n",
+    "# arr = []\n",
+    "\n",
+    "\n",
+    "# for _ in range(n):\n",
+    "#     arr.append(list(map(int, input().rstrip().split())))\n",
+    "arr = [[11, 2, 4], [4, 5, 6], [10, 8, -12]]\n",
+    "\n",
+    "result = diagonalDifference(arr)\n",
+    "\n",
+    "print(result)\n"
+   ]
   }
  ],
  "metadata": {
