220408 hackerR command lists

--- a/ejerciciosSololearn/Sololearn_codigos_01.ipynb
+++ b/ejerciciosSololearn/Sololearn_codigos_01.ipynb
@@ -388,13 +388,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Selector de fecha\n",
     "\n",
     "> Estás haciendo un selector de fecha para una página web y necesitas extraer todos los años en un periodo determinado. El rango te puede ayudar."
@@ -468,22 +461,38 @@
    "source": [
     "### Títulos de libros\n",
     "\n",
-    "Necesitas hacer un programa de categorización especial, que asigne a cada libro un código especial basado en su título: \n",
-    "El código es igual a la primera letra del libro, seguido del número de caracteres del título. \n",
+    "Necesitas hacer un programa de categorización especial, que asigne a cada libro un código especial basado en su título:  \n",
+    "El código es igual a la primera letra del libro, seguido del número de caracteres del título.  \n",
     "Por ejemplo, para el libro \"Harry Potter\", el código sería: H12, ya que contiene 12 caracteres (incluyendo el espacio) \n",
     "  \n",
-    "Se te da un archivo books.txt , que incluye el título del libro, cada uno escrito en una línea separada. \n",
+    "Se te da un archivo books.txt , que incluye el título del libro, cada uno escrito en una línea separada.  \n",
     "Tienes que leer el título uno por uno y sacar el código de cada libro en una línea separada. \n",
     "  \n",
-    "Por ejemplo, si el archivo books.txt contiene: \n",
-    "Some book \n",
-    "Another book \n",
+    "Por ejemplo, si el archivo books.txt contiene:  \n",
+    "`Some book`  \n",
+    "`Another book` \n",
     "  \n",
-    "Tu programa debería generar: \n",
-    "S9 \n",
-    "A12\n",
+    "Tu programa debería generar:  \n",
+    "`S9`  \n",
+    "`A12`\n",
     "\n",
     "// Llama al método `readlines()`, que devuelve una lista que contiene las líneas del archivo. Además, recuerda que todas las líneas, excepto la última, contienen un `\\n` al final, que no debe ser incluido en el recuento de caracteres."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = open(\"/usercode/files/books.txt\", \"r\")\n",
+    "\n",
+    "with open.file():\n",
+    "    for l in file.readlines():\n",
+    "        if \"\\n\" in l:\n",
+    "            print(f\"{l[0]}{len(l)-1}\")\n",
+    "        else:\n",
+    "            print(f\"{l[0]}{len(l)}\")\n"
    ]
   },
   {
@@ -593,6 +602,292 @@
     "\n",
     "> Explanation  \n",
     "> You need 50.00 to buy 10 colors of paint + 40.00 for the canvas and brushes + 9.00 for the tax."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "===\n",
+    "\n",
+    "# Longest Word\n",
+    "\n",
+    "\n",
+    "Given a text as input, find and output the longest word.\n",
+    "\n",
+    "Sample Input  \n",
+    "`this is an awesome text`\n",
+    "\n",
+    "Sample Output  \n",
+    "`awesome`\n",
+    "\n",
+    "> Recall the split(' ') method, which returns a list of words of the string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cancamusa\n"
+     ]
+    }
+   ],
+   "source": [
+    "txt = \"lorem ipsun dolor, amet, cancamusa de melón\"\n",
+    "txt = txt.replace(\",\", \"\")\n",
+    "\n",
+    "lista = txt.split(' ')\n",
+    "\n",
+    "ext = [len(i) for i in lista]\n",
+    "max_ext = max(ext)\n",
+    "indice = ext.index(max_ext)\n",
+    "print(lista[indice])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "===\n",
+    "# Fibonacci\n",
+    "\n",
+    "The Fibonacci sequence is one of the most famous formulas in mathematics.  \n",
+    "Each number in the sequence is the sum of the two numbers that precede it.  \n",
+    "For example, here is the Fibonacci sequence for 10 numbers, starting from 0: 0,1,1,2,3,5,8,13,21,34.\n",
+    "\n",
+    "Write a program to take N (variable num in code template) positive numbers as input, and recursively calculate and output the first N numbers of the Fibonacci sequence (starting from 0).\n",
+    "\n",
+    "Sample Input  \n",
+    "`6`\n",
+    "\n",
+    "Sample Output  \n",
+    "```\n",
+    "0\n",
+    "1\n",
+    "1\n",
+    "2\n",
+    "3\n",
+    "5\n",
+    "```\n",
+    "> If you are making the Fibonacci sequence for n numbers, you should use n<=1 condition as the base case."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 10\n",
+    "\n",
+    "def fibonacci(n):\n",
+    "    #complete the recursive function\n",
+    "    if n == 0:\n",
+    "        print(0)\n",
+    "    \n",
+    "    elif n == 1:\n",
+    "        print(0)\n",
+    "        print(1)\n",
+    "    \n",
+    "    elif n > 1:\n",
+    "        print(0)\n",
+    "        a = 0\n",
+    "        b = 1\n",
+    "        for i in range(n-1):\n",
+    "            print(a+b)\n",
+    "            b, a = a, b+a\n",
+    "\n",
+    "# Sé que no es la mejor versión, pero la he hecho yo con lo que recordaba.\n",
+    "\n",
+    "fibonacci(num)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "=== \n",
+    "# Juice Maker\n",
+    "\n",
+    "\n",
+    "You are given a Juice class, which has name and capacity properties.  \n",
+    "You need to complete the code to enable and adding of two Juice objects, resulting in a new Juice object with the combined capacity and names of the two juices being added.\n",
+    "\n",
+    "For example, if you add an Orange juice with 1.0 capacity and an Apple juice with 2.5 capacity, the resulting juice should have:  \n",
+    "name: **Orange&Apple**  \n",
+    "capacity: **3.5**\n",
+    "\n",
+    "The names have been combined using an & symbol.\n",
+    "> Use the \\_\\_add\\_\\_ method to define a custom behavior for the + operator and return the resulting object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Orange&Apple (3.5L)\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Juice:\n",
+    "    def __init__(self, name, capacity):\n",
+    "        self.name = name\n",
+    "        self.capacity = capacity\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return (self.name + ' ('+str(self.capacity)+'L)')\n",
+    "    \n",
+    "    def __add__(self, other):\n",
+    "        return Juice(f\"{self.name}&{other.name}\", self.capacity + other.capacity)\n",
+    "\n",
+    "\n",
+    "a = Juice('Orange', 1.5)\n",
+    "b = Juice('Apple', 2.0)\n",
+    "\n",
+    "result = a + b\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "===\n",
+    "# Adding Words\n",
+    "\n",
+    "\n",
+    "You need to write a function that takes multiple words as its argument and returns a concatenated version of those words separated by dashes (-).  \n",
+    "The function should be able to take a varying number of words as the argument.\n",
+    "\n",
+    "Sample Input  \n",
+    "```\n",
+    "this\n",
+    "is\n",
+    "great\n",
+    "```\n",
+    "\n",
+    "Sample Output  \n",
+    "`this-is-great`\n",
+    "\n",
+    "> Recall, using *args as a function parameter enables you to pass an arbitrary number of arguments to that function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(I-love-Python-!)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def concatenate(*args):\n",
+    "    text = str(args)\n",
+    "    text = text.replace(\", \", \"-\")\n",
+    "    text = text.replace(\"[\", \"\")\n",
+    "    text = text.replace(\"]\", \"\")\n",
+    "    return text.replace(\"'\", \"\")\n",
+    "\n",
+    "\n",
+    "print(concatenate(\"I\", \"love\", \"Python\", \"!\"))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A partir de otros usuarios:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I-love-Python-!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lam Wei Li (lo he mejorado un poco):\n",
+    "\n",
+    "def concatenate(*args):\n",
+    "    result = None\n",
+    "    for i in args:\n",
+    "        if result is None:\n",
+    "            result = i\n",
+    "        else:\n",
+    "            result += f\"-{i}\"\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "print(concatenate(\"I\", \"love\", \"Python\", \"!\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I-love-Python-!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Nematillo Ochilov\n",
+    "\n",
+    "def concatenate(*args):\n",
+    "    string = \"\"\n",
+    "    for i, w in enumerate(args): \n",
+    "        if i > 0:\n",
+    "            string += f\"-{w}\"\n",
+    "        else:\n",
+    "            string += w\n",
+    "    return string\n",
+    "\n",
+    "\n",
+    "print(concatenate(\"I\", \"love\", \"Python\", \"!\"))\n"
    ]
   }
  ],
