--- a/HackerRank/ejercicios_hackerRank_01.ipynb
+++ b/HackerRank/ejercicios_hackerRank_01.ipynb
@@ -499,6 +499,130 @@
     "\n",
     "print(result)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lists\n",
+    "\n",
+    "Este me costó comprenderlo bastante. Primero se da un número, que son las órdenes que se darán después. Por cada input, se llevará a cabo una de las 7 posibles acciones que repercutirán en una lista. Así, si el input es \"insert 0 5\", el resultado debe ser que se agrega \"5\" a la lista en la posición 0.  \n",
+    "input:  \n",
+    "```\n",
+    "12\n",
+    "insert 0 5\n",
+    "insert 1 10\n",
+    "insert 0 6\n",
+    "print\n",
+    "remove 6\n",
+    "append 9\n",
+    "append 1\n",
+    "sort\n",
+    "print\n",
+    "pop\n",
+    "reverse\n",
+    "print\n",
+    "```\n",
+    "output:  \n",
+    "```\n",
+    "[6, 5, 10]\n",
+    "[1, 5, 9, 10]\n",
+    "[9, 5, 1]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 5, 10]\n",
+      "[1, 5, 9, 10]\n",
+      "[9, 5, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = int(input())\n",
+    "\n",
+    "def sorting(lista):\n",
+    "    lista.sort()\n",
+    "    return lista\n",
+    "\n",
+    "def popping(lista):\n",
+    "    lista.pop()\n",
+    "    return lista\n",
+    "\n",
+    "def reversing(lista):\n",
+    "    lista.reverse()\n",
+    "    return lista\n",
+    "\n",
+    "def appending(lista, elem):\n",
+    "    lista.append(int(elem))\n",
+    "    return lista\n",
+    "\n",
+    "def removing(lista, elem):\n",
+    "    lista.remove(int(elem))\n",
+    "    return lista\n",
+    "\n",
+    "def inserting(lista, ind, elem):\n",
+    "    lista.insert(int(ind), int(elem))\n",
+    "    return lista\n",
+    "\n",
+    "def printing(lista):\n",
+    "    print(lista)\n",
+    "\n",
+    "list_out = []\n",
+    "\n",
+    "for i in range(N):\n",
+    "    inp = input()\n",
+    "    temp = inp.split(\" \")\n",
+    "    if temp[0] == \"insert\":\n",
+    "        inserting(list_out, temp[1], temp[2])\n",
+    "    elif temp[0] == \"remove\":\n",
+    "        removing(list_out, temp[1])\n",
+    "    elif temp[0] == \"print\":\n",
+    "        printing(list_out)\n",
+    "    elif temp[0] == \"append\":\n",
+    "        appending(list_out, temp[1])\n",
+    "    elif temp[0] == \"sort\":\n",
+    "        sorting(list_out)\n",
+    "    elif temp[0] == \"pop\":\n",
+    "        popping(list_out)\n",
+    "    elif temp[0] == \"reverse\":\n",
+    "        reversing(list_out)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Me preguntaba si habría alguna manera de que la propia palabra del input sirviera para llamar a una función: insert -> insert(). Al parecer, aquí usan getattr(). Puede ser interesante. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "T = int(input().strip())\n",
+    "L = []\n",
+    "for t in range(T):\n",
+    "    args = input().strip().split(\" \")\n",
+    "    if args[0] == \"print\":\n",
+    "        print(L)\n",
+    "    elif len(args) == 3:\n",
+    "        getattr(L, args[0])(int(args[1]), int(args[2]))\n",
+    "    elif len(args) == 2:\n",
+    "        getattr(L, args[0])(int(args[1]))\n",
+    "    else:\n",
+    "        getattr(L, args[0])()\n"
+   ]
   }
  ],
  "metadata": {
