--- a/ejerciciosSololearn/Sololearn_codigos_01.ipynb
+++ b/ejerciciosSololearn/Sololearn_codigos_01.ipynb
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -644,8 +644,8 @@
     "lista = txt.split(' ')\n",
     "\n",
     "ext = [len(i) for i in lista]\n",
-    "max_ext = max(ext)\n",
-    "indice = ext.index(max_ext)\n",
+    "\n",
+    "indice = ext.index(max(ext))\n",
     "print(lista[indice])"
    ]
   },
@@ -722,6 +722,81 @@
     "# Sé que no es la mejor versión, pero la he hecho yo con lo que recordaba.\n",
     "\n",
     "fibonacci(num)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Interesante versión con append\n",
+    "num = 10\n",
+    "\n",
+    "\n",
+    "def fibonacci(n):\n",
+    "    fibo = [0, 1]\n",
+    "    for i in range(n-2):\n",
+    "\n",
+    "        fibo.append(fibo[i]+fibo[i+1])\n",
+    "\n",
+    "    print(fibo)\n",
+    "\n",
+    "\n",
+    "fibonacci(num)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Esta es la versión recursiva, pero al no almacenar los valores va cada vez más lento al tener que recalcular todo.  \n",
+    "Funciona ejecutando la función una y otra vez hasta que llega a n == 2 o n == 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 :: 1\n",
+      "2 :: 1\n",
+      "3 :: 2\n",
+      "4 :: 3\n",
+      "5 :: 5\n",
+      "6 :: 8\n",
+      "7 :: 13\n",
+      "8 :: 21\n",
+      "9 :: 34\n",
+      "10 :: 55\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Versión recursiva.\n",
+    "\n",
+    "def fibonacci_recursivo(n):\n",
+    "    if n == 1:\n",
+    "        return 1\n",
+    "    elif n == 2:\n",
+    "        return 1\n",
+    "    elif n > 2:\n",
+    "        return fibonacci_recursivo(n-1) + fibonacci_recursivo(n-2)\n",
+    "    \n",
+    "for n in range(1, 11):\n",
+    "    print(n, \"::\", fibonacci_recursivo(n))"
    ]
   },
   {
@@ -888,6 +963,25 @@
     "\n",
     "\n",
     "print(concatenate(\"I\", \"love\", \"Python\", \"!\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I-love-Python-!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Si no tuviera que escribir una función:\n",
+    "\n",
+    "print(\"I\", \"love\", \"Python\", \"!\", sep=\"-\")\n"
    ]
   }
  ],
