--- a/HackerRank/ejercicios_hackerRank_01.ipynb
+++ b/HackerRank/ejercicios_hackerRank_01.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Print function\n",
+    "# Nivel fácil\n",
+    "\n",
+    "## Print function\n",
     "\n",
     "Te dan un número por input y hay que imprimir todos los números del 1 hasta ese número seguidos uno detrás de otro:\n",
     "```\n",
@@ -66,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# List comprehension\n",
+    "## List comprehension\n",
     "\n",
     "Usando listas de comprensión, tengo que establecer todas las permutaciones posibles entre los números dados en x, y, z de tal manera que no aparezcan aquellas en las que la suma de los 3 dígitos dé como resultado n. "
    ]
@@ -622,6 +624,279 @@
     "        getattr(L, args[0])(int(args[1]))\n",
     "    else:\n",
     "        getattr(L, args[0])()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tuples hash\n",
+    "Este se ve que había cambiado la función hash desde Python 2. Y ha sido una gilipollez."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7407538979007996017\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == '__main__':\n",
+    "    n = int(input())\n",
+    "    integer_list = map(int, input().split())\n",
+    "    tupla = tuple(integer_list)\n",
+    "    print(hash(tupla))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introducción a sets\n",
+    "\n",
+    "Debo calcular la media (average) de una lista, pero como deben ser valores únicos, me tengo que asegurar convirtiéndola en un set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "169.375\n"
+     ]
+    }
+   ],
+   "source": [
+    "def average(array):\n",
+    "    # your code goes here\n",
+    "    unicArray = set(array)\n",
+    "    return round(sum(unicArray)/len(unicArray), 3)\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    n = int(input())\n",
+    "    integers = map(int, input().split())\n",
+    "    \n",
+    "    print(average(integers))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Symmetric Difference\n",
+    "\n",
+    "Recibiendo como inputs 2 sets, tengo que mostrar los valores que no se encuentran en ninguno. Esto se conoce como diferencia simétrica. El output debe mostrarse en orden ascendente."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "9\n",
+      "11\n",
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "m_first = int(input())\n",
+    "m_integers = set(map(int, input().split()))\n",
+    "n_first = int(input())\n",
+    "n_integers = set(map(int, input().split()))\n",
+    "\n",
+    "finset = m_integers.symmetric_difference(n_integers)\n",
+    "finlist = sorted(finset)\n",
+    "for i in finlist:\n",
+    "    print(i)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## No idea!\n",
+    "\n",
+    "Pues casi es lo que me sucede cuando leo el enunciado. Me parece absurdo eso de poner un input con los números que van a introducirse después. Pero bueno... \n",
+    "\n",
+    "Me van a dar un array y dos sets. Si los números coinciden con mi set 1, sube mi alegría. Si coinciden con el set 2, baja. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "nm = map(int, input().split())\n",
+    "mArray = map(int, input().split())\n",
+    "setA = set(map(int, input().split()))\n",
+    "setB = set(map(int, input().split()))\n",
+    "\n",
+    "happiness = 0\n",
+    "for n in mArray:\n",
+    "    if n in setA:\n",
+    "        happiness += 1\n",
+    "    if n in setB:\n",
+    "        happiness -= 1\n",
+    "\n",
+    "print(happiness)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Set .add()\n",
+    "\n",
+    "Se da una cantidad que es el número de elementos que se van a dar por input. Ya que habrá repetidos, el output tiene que ser el número de elementos únicos que se han dado. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "nm = int(input())\n",
+    "paises = set()\n",
+    "for i in range(nm):\n",
+    "    paises.add(input())\n",
+    "    \n",
+    "print(len(paises))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Set .discard() .remove() & .pop()\n",
+    "Como las operaciones de listas, pero con sets.  \n",
+    "\n",
+    "Como me equivoqué con sum/len, al final metí excepciones innecesarias y todo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# n = int(input())\n",
+    "# s = set(map(int, input().split()))\n",
+    "# nComandos = int(input())\n",
+    "\n",
+    "n = 9\n",
+    "s = {1, 2, 3, 4, 5, 6, 7, 8, 9}\n",
+    "nComandos = 10\n",
+    "\n",
+    "# for time in range(nComandos):\n",
+    "#     cmd = input().split()\n",
+    "cmds = [['pop'],\n",
+    "        ['remove', '9'],\n",
+    "        ['discard', '9'],\n",
+    "        ['discard', '8'],\n",
+    "        ['remove', '7'],\n",
+    "        ['pop'],\n",
+    "        ['discard', '6'],\n",
+    "        ['remove', '5'],\n",
+    "        ['pop'],\n",
+    "        ['discard', '5']]\n",
+    "for cmd in cmds:\n",
+    "    if 'pop' in cmd:\n",
+    "        try:\n",
+    "            x=s.pop()\n",
+    "        except KeyError:\n",
+    "            continue\n",
+    "        finally:\n",
+    "            print(x)\n",
+    "            print(s)\n",
+    "    if 'remove' in cmd:\n",
+    "        try:\n",
+    "            s.remove(int(cmd[1]))\n",
+    "        except KeyError:\n",
+    "            continue\n",
+    "        finally:\n",
+    "            print(s)\n",
+    "    if 'discard' in cmd:\n",
+    "        try:\n",
+    "            s.discard(int(cmd[1]))\n",
+    "        except KeyError:\n",
+    "            continue\n",
+    "        finally:\n",
+    "            print(s)\n",
+    "\n",
+    "print(sum(s))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pensé que set.pop() quitaba el último elemento o uno aleatorio. Resulta que no. En Python 3 al menos va quitando del principio. ¿Cómo te quedas?\n",
+    "\n",
+    "Una solución dada:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "s = set(map(int, input().split()))\n",
+    "for _ in range(int(input())):\n",
+    "    cmd = input().split()\n",
+    "    if cmd[0] == 'pop':\n",
+    "        s.pop()\n",
+    "    elif cmd[0] == 'discard':\n",
+    "        s.discard(int(cmd[1]))\n",
+    "    else:\n",
+    "        s.remove(int(cmd[1]))\n",
+    "\n",
+    "print(sum(s))\n"
    ]
   }
  ],
