--- a/retosAtareao/Retos-atareao.ipynb
+++ b/retosAtareao/Retos-atareao.ipynb
@@ -1124,6 +1124,117 @@
     "    config = f\"{APP}.conf\"\n",
     "    main(APP, config)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd1a1bd1",
+   "metadata": {},
+   "source": [
+    "## Reto 6\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aff1b995",
+   "metadata": {},
+   "source": [
+    "Move:  \n",
+    "os.remove si file in destino y entonces shutil.move source/file a destino  \n",
+    "Es posible que os.rename también funcione si cambiamos el nombre de la carpeta.  \n",
+    "\n",
+    "Copy:\n",
+    "Si file in destino: pass\n",
+    "Si no: shutil.copy2\n",
+    "\n",
+    "Lo que me está fallando de momento es cómo saber si el archivo está en el directorio."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b45c5caf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shutil\n",
+    "import os\n",
+    "\n",
+    "\n",
+    "source = 'Img_In'\n",
+    "dest = 'Img_Out'\n",
+    "images = os.listdir(source)\n",
+    "\n",
+    "for image in images:\n",
+    "    shutil.move(f'{source}/{image}', dest)\n",
+    "    # shutil.copy2(f'{source}/{image}', dest)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98f33116",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def copy(source, dest):\n",
+    "    \"\"\"Copia los archivos de un directorio a otro,\n",
+    "    a menos que ya existan en el directorio de destino.\"\"\"\n",
+    "    images = os.listdir(source)\n",
+    "    for image in images:\n",
+    "        if image not in dest:\n",
+    "            shutil.copy2(f'{source}/{image}', dest)\n",
+    "\n",
+    "\n",
+    "def move(source, dest):\n",
+    "    \"\"\"Mueve los archivos de un directorio a otro.\n",
+    "    Si ya existen, borra primero los de destino.\"\"\"\n",
+    "    images = os.listdir(source)\n",
+    "    for image in images:\n",
+    "        if image in dest:\n",
+    "            os.remove(f'{dest}/{image}')\n",
+    "            shutil.move(f'{source}/{image}', dest)\n",
+    "\n",
+    "\n",
+    "def step3(dictio):\n",
+    "    \"\"\"Lee las acciones del archivo de configuración\n",
+    "    y las ejecuta.\"\"\"\n",
+    "    for folder in dictio:\n",
+    "        action = folder['action']\n",
+    "        if action == 'copy':\n",
+    "            utils.copy(folder['in'], folder['out'])\n",
+    "        elif action == 'move':\n",
+    "            utils.move(folder['in'], folder['out'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "be3fe94e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "source = '/Users/noave/Diogenes/Img_2_In'\n",
+    "dest = '/Users/noave/Diogenes/Img_2_Out'\n",
+    "image = 'punch-a-nazi.jpg'\n",
+    "\n",
+    "# if not os.path.exists(f'{dest}/{image}'):\n",
+    "os.path.exists(f'{dest}/{image}')\n",
+    "\n",
+    "# image in images\n",
+    "# if image in dest:\n",
+    "#     os.remove(f\"{dest}/{image}\")"
+   ]
   }
  ],
  "metadata": {
