220428 Sololearn Data Structures terminado

--- a/ejerciciosSololearn/Sololearn_codigos_01.ipynb
+++ b/ejerciciosSololearn/Sololearn_codigos_01.ipynb
@@ -983,6 +983,127 @@
     "\n",
     "print(\"I\", \"love\", \"Python\", \"!\", sep=\"-\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ticket Office\n",
+    "\n",
+    "\n",
+    "You are analyzing sales data from a ticket office.  \n",
+    "The ticket for an adult is $20, while the ticket for a child under 18 is $5.  \n",
+    "The data you are given is in a dictionary format, where the keys are the sold ticket numbers, and the values are the customer ages.  \n",
+    "For example, \"123-08\": 24 means that the ticket was bought a 24 year old.  \n",
+    "Your goal is to calculate how much more money the office would make if it would change the ticket discount age to the given input.  \n",
+    "So, your program needs to take an integer as input and output the percentage of revenue growth, if the discount was given to people under that age.\n",
+    "\n",
+    "For example, if the office made $15000 with the original discount age, and would make $18000 with 14 as the discount age, then the growth would be ((18000-15000)/15000)*100 = 20%\n",
+    "\n",
+    "So, for the input 14, your program should output 20. The output should be an integer (use int() to convert the result). \n",
+    "\n",
+    "```\n",
+    "To iterate over the values of a dictionary, you can use the .values() function:\n",
+    "for value in data.values()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-40.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = {\n",
+    "    \"100-90\": 25, \"42-01\": 48, \"55-09\": 12, \"128-64\": 71, \"002-22\": 18, \"321-54\": 19, \"097-32\": 33, \"065-135\": 64, \"99-043\": 80, \"111-99\": 11, \"123-019\": 5, \"109-890\": 72, \"132-123\": 27, \"32-908\": 27, \"008-09\": 25, \"055-967\": 35, \"897-99\": 44, \"890-98\": 56, \"344-32\": 65, \"43-955\": 59, \"001-233\": 9, \"089-111\": 15, \"090-090\": 17, \"56-777\": 23, \"44-909\": 27, \"13-111\": 21, \"87-432\": 15, \"87-433\": 14, \"87-434\": 23, \"87-435\": 11, \"87-436\": 12, \"87-437\": 16, \"94-121\": 15, \"94-122\": 35, \"80-089\": 10, \"87-456\": 8, \"87-430\": 40\n",
+    "}\n",
+    "age = int(input())\n",
+    "#your code goes here\n",
+    "\n",
+    "def disc(x):\n",
+    "    desc = 0\n",
+    "    full = 0\n",
+    "\n",
+    "    for value in data.values():\n",
+    "        if value < x:\n",
+    "            desc += 1\n",
+    "        else:\n",
+    "            full += 1\n",
+    "\n",
+    "    return (desc*5)+(full*20)\n",
+    "\n",
+    "\n",
+    "old = disc(18)\n",
+    "new = disc(age)\n",
+    "print(((new-old)/old)*100)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Balanced Parentheses\n",
+    "\n",
+    "\n",
+    "Parentheses are balanced, if all opening parentheses have their corresponding closing parentheses.\n",
+    "\n",
+    "Given an expression as input, we need to find out whether the parentheses are balanced or not.\n",
+    "For example, \"(x+y)\\*(z-2\\*(6))\" is balanced, while \"7-(3(2\\*9))4) (1\" is not balanced.\n",
+    "\n",
+    "The problem can be solved using a stack.  \n",
+    "Push each opening parenthesis to the stack and pop the last inserted opening parenthesis whenever a closing parenthesis is encountered.  \n",
+    "If the closing bracket does not correspond to the opening bracket, then stop and say that the brackets are not balanced.  \n",
+    "Also, after checking all the parentheses, we need to check the stack to be empty -- if it's not empty, then the parentheses are not balanced.  \n",
+    "\n",
+    "Implement the balanced() function to return True if the parentheses in the given expression are balanced, and False if not.\n",
+    "\n",
+    "**Sample Input**:  \n",
+    "(a( ) eee) )\n",
+    "\n",
+    "**Sample Output**:  \n",
+    "False \n",
+    "\n",
+    "> You can use a simple list for a stack. Use `list.insert(0, item)` to push on the stack, and `list.pop(0)` to pop the top item. You can access the top element of the stack using `list[0]`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def balanced(expression):\n",
+    "    #your code goes here\n",
+    "    stack = [0]\n",
+    "    paired = True\n",
+    "    n = 1\n",
+    "    for i in expression:\n",
+    "        if i == \"(\":\n",
+    "            stack.insert(0, n)\n",
+    "            n += 1\n",
+    "        elif i == \")\":\n",
+    "            if stack[0] > 0:\n",
+    "                stack.pop(0)\n",
+    "                n -= 1\n",
+    "            else:\n",
+    "                paired = False\n",
+    "\n",
+    "    if stack[0] == 0 and paired == True:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "\n",
+    "print(balanced(input()))\n"
+   ]
   }
  ],
  "metadata": {
